--- a/23213/v.abramenko/tests/Makefile
+++ b/23213/v.abramenko/tests/Makefile
@@ -4,4 +4,4 @@ client: client.c
 	cc -v client.c -o client -lnsl -lsocket 
 
 server: server.c
-	cc -v server.c -o server -laio -lnsl -lsocket
+	cc -v server.c -o server -lnsl -lsocket
